--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,108 @@ a {
 	background-color: #131313;
 	color: #fff;
 }
+
+.bike {
+	padding: 100px 0 150px;
+}
+
+.bike__inner {
+	display: flex;
+	justify-content: space-between;
+}
+
+.bike__column-slider {
+	flex-basis: 630px;
+	margin-left: 30px;
+	max-width: 630px;
+}
+
+.bike__title {
+	font-weight: 700;
+	font-size: 64px;
+	line-height: 77px;
+	margin: 60px 0 5px;
+}
+
+.bike__subtitle {
+	font-family: 'Inter';
+	font-weight: 400;
+	font-size: 32px;
+	line-height: 39px;
+	color: #6f6f6f;
+	margin: 0 0 60px;
+}
+
+.bike__text {
+	margin-bottom: 20px;
+	max-width: 420px;
+}
+
+.bike__link {
+	margin-top: 80px;
+	display: inline-block;
+	text-transform: uppercase;
+	background: #131313;
+	color: #ffffff;
+	padding: 28px 81px;
+	font-size: 20px;
+	line-height: 24px;
+	letter-spacing: 1.1em;
+}
+
+.bike-slider .slick-dots {
+	right: 0;
+	top: 50px;
+}
+
+.slick-dots {
+	position: absolute;
+}
+
+.slick-dots li + li {
+	padding-top: 10px;
+}
+
+.slick-dots button {
+	font-size: 0;
+	padding: 0;
+	border: none;
+	background-color: #131313;
+	border-radius: 7px;
+	width: 2px;
+	height: 25px;
+	cursor: pointer;
+	transition: background-color 0.3s;
+}
+
+.slick-dots button:hover,
+.slick-active button {
+	background-color: #ff4040;
+}
+
+.bike__list {
+	margin-top: 25px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.bike__list-item {
+	min-width: 160px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	min-height: 58px;
+}
+.bike__list-num {
+	font-weight: 700;
+	min-width: 160px;
+	text-transform: uppercase;
+}
+
+.bike__list-text {
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 15px;
+	margin: auto 0;
+}
