--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 *::before {
 	box-sizing: border-box;
 }
+html {
+	scroll-behavior: smooth;
+}
 
 body {
 	font-family: 'Inter', sans-serif;
@@ -25,6 +28,10 @@ li {
 a {
 	text-decoration: none;
 	color: inherit;
+}
+
+p {
+	margin: 0;
 }
 
 .container {
@@ -104,10 +111,15 @@ a {
 	text-transform: uppercase;
 	background: #131313;
 	color: #ffffff;
-	padding: 28px 81px;
+	padding: 28px 71px 28px 81px;
 	font-size: 20px;
 	line-height: 24px;
 	letter-spacing: 1.1em;
+	transition: all 0.3s;
+}
+
+.bike__link:hover {
+	background: #ff4040;
 }
 
 .bike-slider .slick-dots {
@@ -165,4 +177,281 @@ a {
 	font-weight: 400;
 	line-height: 15px;
 	margin: auto 0;
+}
+
+.info {
+	margin-bottom: 150px;
+}
+
+.info__inner {
+	display: flex;
+}
+
+.info__img {
+	margin-right: 60px;
+	flex-basis: 570px;
+	object-fit: cover;
+}
+
+.info__list {
+	flex-basis: 490px;
+}
+
+.info__item + .info__item {
+	margin-top: 50px;
+}
+
+.info__item-title {
+	margin: 0 0 10px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 19px;
+	text-transform: uppercase;
+	color: #131313;
+}
+
+.info__item-text {
+	max-width: 450px;
+}
+
+.characteristics {
+	margin-bottom: 150px;
+}
+
+.characteristics__head {
+	margin: 0 0 40px;
+	font-size: 16px;
+	line-height: 19px;
+	text-transform: uppercase;
+}
+
+.characteristics__inner {
+	display: flex;
+}
+
+.characteristics__items {
+	flex-basis: 570px;
+	margin-right: 60px;
+}
+
+.characteristics__list + .characteristics__list {
+	padding-top: 30px;
+}
+
+.characteristics__title {
+	padding: 2px 0 3px;
+	text-transform: uppercase;
+	background-color: #131313;
+	color: #fff;
+	font-weight: 700;
+}
+
+.characteristics__line {
+	display: flex;
+	padding-top: 5px;
+}
+
+.characteristics__name {
+	flex-basis: 285px;
+	padding-right: 25px;
+}
+
+.characteristics__descr {
+	flex-basis: 285px;
+}
+
+.characteristics__img {
+	align-self: center;
+}
+
+.slider {
+	margin-bottom: 50px;
+}
+
+.slider__items .slick-dots {
+	top: 0;
+	left: 0;
+}
+
+.slider__item {
+	padding-left: 50px;
+}
+
+.price {
+	margin-bottom: 100px;
+}
+
+.price__inner {
+	position: relative;
+}
+
+.form {
+	max-width: 420px;
+}
+
+.form__title {
+	margin-bottom: 40px;
+	font-size: 16px;
+	line-height: 19px;
+	text-transform: uppercase;
+}
+
+.form__text {
+	max-width: 300px;
+	margin-bottom: 30px;
+}
+.form__input-name,
+.form__input-phone {
+	width: 100%;
+	border: none;
+	border-bottom: 1px solid #131313;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
+}
+
+.form__input-text,
+.form__input-name::placeholder,
+.form__input-phone::placeholder {
+	color: #6f6f6f;
+	opacity: 0.5;
+}
+
+.form__input-text {
+	margin-bottom: 10px;
+}
+
+.form__label-box {
+	display: flex;
+	margin-bottom: 50px;
+}
+
+.form__label + .form__label {
+	margin-left: 23px;
+}
+
+.form__input-radio {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+}
+.form__input-radio:checked + .form__bike {
+	display: block;
+}
+
+.form__bike {
+	display: none;
+	position: absolute;
+	right: 0;
+	top: 0;
+}
+
+.form__bike-img {
+}
+
+.form__bike-price {
+	font-size: 32px;
+	position: absolute;
+	top: 30px;
+	left: 0;
+	right: 0;
+	width: 220px;
+	height: 100px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border: 1px solid #ff4040;
+	border-radius: 50%;
+	transform: translateX(-50%);
+}
+.form__bike-price::after {
+	content: '';
+	position: absolute;
+	width: 220px;
+	height: 100px;
+	border: 1px solid #ff4040;
+	border-radius: 50%;
+	top: 12px;
+	left: 0;
+}
+.form__radio-style {
+	width: 80px;
+	height: 12px;
+	border-radius: 30px;
+	cursor: pointer;
+}
+
+.form__radio-style--gray {
+	background: #6f6f6f;
+}
+
+.form__radio-style--white {
+	border: 1px solid #6f6f6f;
+	border-radius: 30px;
+}
+
+.form__radio-style--red {
+	background: #ff4040;
+}
+
+.form__btn {
+	background-color: #131313;
+	color: #fff;
+	padding: 28px 71px 28px 81px;
+	border: none;
+	cursor: pointer;
+	text-transform: uppercase;
+	font-size: 20px;
+	line-height: 24px;
+	letter-spacing: 1.1em;
+	transition: all 0.3s;
+}
+
+.form__btn:hover {
+	background: #ff4040;
+}
+
+.footer {
+	background-color: #131313;
+}
+
+.footer__inner {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 100px;
+}
+
+.footer__link {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 15px;
+	text-transform: lowercase;
+	color: #ffffff;
+}
+
+.footer__social-link + .footer__social-link {
+	margin-left: 26px;
+}
+
+.footer__contacts {
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 15px;
+	text-transform: lowercase;
+	color: #ffffff;
+}
+
+.footer__contacts-link + .footer__contacts-link {
+	margin-top: 10px;
+}
+
+.footer__contacts-link {
+	display: flex;
+	align-items: center;
+}
+
+.footer__contacts-img {
+	margin-right: 10px;
 }
