--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ p {
 }
 
 .container {
-	width: 1220px;
+	max-width: 1220px;
 	margin: 0 auto;
 	padding: 0 10px;
 }
@@ -155,7 +155,7 @@ p {
 .bike__list {
 	margin-top: 25px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .bike__list-item {
@@ -454,4 +454,292 @@ p {
 
 .footer__contacts-img {
 	margin-right: 10px;
+}
+
+@media (max-width: 1140px) {
+	.form__bike {
+		top: 45px;
+	}
+
+	.form__bike-img {
+		width: 500px;
+	}
+
+	.menu__link:hover {
+		background-color: #fff;
+		color: #131313;
+	}
+
+	.bike__link:hover {
+		background-color: #131313;
+		color: #fff;
+	}
+}
+
+@media (max-width: 1110px) {
+	.bike {
+		padding: 0;
+	}
+
+	.bike__inner {
+		flex-wrap: wrap;
+	}
+
+	.bike__text {
+		max-width: 100%;
+	}
+
+	.bike__link {
+		margin-top: 30px;
+	}
+
+	.bike__column {
+		margin-bottom: 30px;
+	}
+
+	.bike__column-slider {
+		max-width: 100%;
+		margin-left: 0;
+	}
+
+	.info {
+		padding-top: 50px;
+	}
+
+	.info__img {
+		display: none;
+	}
+
+	.info__list {
+		flex-basis: 100%;
+	}
+
+	.info__item-text {
+		max-width: 100%;
+	}
+
+	.characteristics {
+		padding-top: 50px;
+		margin-bottom: 50px;
+	}
+
+	.slider__img {
+		object-fit: cover;
+		width: 100%;
+	}
+
+	.price {
+		margin-bottom: 50px;
+	}
+}
+
+@media (max-width: 991px) {
+	.menu {
+		margin-right: 0;
+	}
+
+	.characteristics__inner {
+		flex-wrap: wrap;
+	}
+
+	.characteristics__img {
+		order: -1;
+		width: 100%;
+		margin-bottom: 30px;
+	}
+
+	.characteristics__items {
+		flex-basis: 100%;
+		margin-right: 0;
+	}
+
+	.characteristics__name {
+		flex-basis: 50%;
+	}
+
+	.characteristics__descr {
+		flex-basis: 50%;
+	}
+
+	.form__label-box {
+		margin-bottom: 300px;
+	}
+
+	.form__bike {
+		top: auto;
+		bottom: 85px;
+		left: 0;
+		right: auto;
+	}
+
+	.form__bike-img {
+		width: 430px;
+	}
+
+	.form__bike-price {
+		right: -20%;
+		top: 0;
+		transform: translateX(100%);
+		left: auto;
+	}
+}
+
+@media (max-width: 780px) {
+	.form__bike-price {
+		right: 0;
+		top: -55px;
+		transform: translateX(60%);
+	}
+}
+
+@media (max-width: 670px) {
+	.bike__title {
+		font-size: 44px;
+		line-height: 57px;
+		margin-top: 30px;
+	}
+
+	.bike__subtitle {
+		margin: 0 0 30px;
+		font-size: 22px;
+		line-height: 29px;
+	}
+
+	.bike__list {
+		flex-wrap: wrap;
+	}
+
+	.bike__list-item {
+		width: 50%;
+		margin-bottom: 15px;
+	}
+	.slider__item {
+		padding-left: 15px;
+	}
+}
+
+@media (max-width: 640px) {
+	.header__inner {
+		display: block;
+		text-align: center;
+	}
+
+	.menu {
+		margin-top: 50px;
+	}
+
+	.menu__list {
+		justify-content: space-evenly;
+	}
+
+	.menu__item + .menu__item {
+		padding-left: 0;
+	}
+
+	.menu__link {
+		padding: 25px 20px;
+	}
+
+	.info {
+		margin-bottom: 60px;
+	}
+
+	.info__item + .info__item {
+		padding-top: 25px;
+	}
+}
+
+@media (max-width: 580px) {
+	.form__bike-price {
+		right: auto;
+		top: 50px;
+		transform: translateX(0%);
+		left: 0;
+		display: block;
+		font-size: 18px;
+		border: none;
+	}
+
+	.form__bike-price::after {
+		display: none;
+	}
+
+	.form__bike-price span {
+		color: #fff;
+		background-color: #000;
+		padding: 5px 10px;
+	}
+
+	.footer__inner {
+		display: block;
+		height: auto;
+		padding: 15px 0;
+		text-align: center;
+	}
+
+	.footer__social {
+		padding: 15px 0;
+	}
+
+	.footer__contacts {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+}
+
+@media (max-width: 460px) {
+	.menu__list {
+		justify-content: space-between;
+	}
+
+	.menu__link {
+		padding: 25px 5px;
+	}
+
+	.bike__link,
+	.form__btn {
+		padding: 15px;
+		letter-spacing: 0.9em;
+	}
+
+	.slider {
+		display: none;
+	}
+
+	.price__inner {
+		text-align: center;
+	}
+
+	.form__text {
+		max-width: 100%;
+	}
+
+	.form__bike {
+		bottom: 55px;
+		right: 0;
+	}
+
+	.form__bike-price {
+		top: -20px;
+	}
+
+	.form__bike-img {
+		width: 270px;
+	}
+
+	.form__label-box {
+		margin-bottom: 220px;
+		justify-content: center;
+	}
+}
+
+@media (max-width: 350px) {
+	.menu {
+		margin-top: 30px;
+	}
+
+	.menu__link {
+		font-size: 12px;
+	}
 }
